[tool.poetry]
name = "larvixon-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.0"
numpy = "^1.26.4"
dash-mantine-components = "^0.14.3"
dash-bootstrap-components = "^1.6.0"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
